examples/isolated/0_1_metallb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
