examples/isolated/2_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: net-demo-isolated
  labels:
    cudn-network: isolated
    k8s.ovn.org/primary-user-defined-network: ""
