examples/isolated/3_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: net-demo-isolated
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
        - name: hello
          image: openshift/hello-openshift
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: net-demo-isolated
spec:
  selector:
    app: hello-openshift
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
